Second Commit - still incomplete

--- a/pages/about.html
+++ b/pages/about.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Rambling Odyssey Yoga</title>
+    <title>About Rambling Odyssey</title>
     <!-- Stylesheet Reference(s) -->
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -38,16 +38,18 @@
 <!-- Page Content -->
 <article class="subpage">
     <div class="aboutStudio">
-        <div class="abtCard">
-            <div class="aboutStory">
-                <h1 class="cardTitle">Our Story</h1>
-                <p>Rambling Odyssey Yoga started as an idea one morning at Amanda’s coffee table, as she enjoyed a warm mug of tea and worked through the flows she wanted to offer in her class that afternoon. Having worked in many different studios through the years, Amanda wanted to open her own studio in hopes of building a strong community who could encourage one another in deepening their yoga practices. With a grateful heart and a leap of faith, Amanda opened Rambling Odyssey Yoga in 2019 and hasn’t looked back. Come join our growing community of yogis and see what all the fuss is about!</p>
+        <div class="cardContainer">
+            <div class="abtCard">
+                <div class="aboutStory">
+                    <h1 class="cardTitle">Our Story</h1>
+                    <p>Rambling Odyssey Yoga started as an idea one morning at Amanda’s coffee table, as she enjoyed a warm mug of tea and worked through the flows she wanted to offer in her class that afternoon. Having worked in many different studios through the years, Amanda wanted to open her own studio in hopes of building a strong community who could encourage one another in deepening their yoga practices. With a grateful heart and a leap of faith, Amanda opened Rambling Odyssey Yoga in 2019 and hasn’t looked back. Come join our growing community of yogis and see what all the fuss is about!</p>
+                </div>
             </div>
-        </div>
-        <div class="abtCard">
-            <div class="aboutPhilosophy">
-                <h1 class="cardTitle">Our Philosophy</h1>
-                <p>Rambling Odyssey Yoga offers classes for new and experienced yogis alike; the hope is each student will find a way to connect with one another in an open, creative environment meant to broaden your yoga practice and deepen your personal experience. We are here to push ourselves mentally and physical, to encourage each other in our growth, and to find peace in the chaos of our daily lives. Our instructors are invested in helping their students discover their own limits and push past them. There’s a class for everyone at Rambling Odyssey Yoga and we can’t wait for you to join us. <a class="abtcred-link" href="/pages/pricing.html">Learn how!</a></p>
+            <div class="abtCard">
+                <div class="aboutPhilosophy">
+                    <h1 class="cardTitle">Our Philosophy</h1>
+                    <p>Rambling Odyssey Yoga offers classes for new and experienced yogis alike; the hope is each student will find a way to connect with one another in an open, creative environment meant to broaden your yoga practice and deepen your personal experience. We are here to push ourselves mentally and physical, to encourage each other in our growth, and to find peace in the chaos of our daily lives. Our instructors are invested in helping their students discover their own limits and push past them. There’s a class for everyone at Rambling Odyssey Yoga and we can’t wait for you to join us. <a class="abtcred-link" href="/pages/pricing.html">Learn how!</a></p>
+                </div>
             </div>
         </div>
     </div>
@@ -87,7 +89,7 @@
                     <p class="card-text">New to yoga instruction, but not to the practice, Laurie completed her RYT200 at CorePower Yoga in 2019 and we are excited to welcome her to the Rambling Odyssey Yoga studio.</p>
                     <p class="card-text">Laurie’s positivity, gentle demeanor, and thoughtful instruction will help students old and new deepen their practice.</p>
                     <div class="abtWrapper">
-                        <a class="abtcred-link" target="_BLANK" href="https://www.pexels.com/photo/woman-girl-animal-dog-4056535/">Photo</a>by 
+                        <a class="abtcred-link" target="_BLANK" href="https://www.pexels.com/photo/woman-girl-animal-dog-4056535/">Photo</a> by 
                         <a class="abtcred-link" target="_BLANK" href="">cottonbro</a> from 
                         <a class="abtcred-link" target="_BLANK" href="https://www.pexels.com/">Pexels</a>
                     </div>
@@ -95,18 +97,17 @@
             </div>
         </div>
     </div>
+    <div>
+        <p class="disclaimer">Please note, The Rambling Odyssey Yoga Studio is a made-up studio; it got its start in 2020 when website creator Alli Adolphson needed a topic to build a website for in her ICT-4505 Website Design and Management Class. The studio, owner, instructors, class schedules and pricing, location, and other relevant details about Rambling Odyssey Yoga, etc. have been made up and are not intended to represent real people, places, or class offerings. </p>
+    </div>
 </article>
-
-<div>
-    <p class="disclaimer">Please note, The Rambling Odyssey Yoga Studio is a made-up studio; it got its start in 2020 when website creator Alli Adolphson needed a topic to build a website for in her ICT-4505 Website Design and Management Class. The studio, owner, instructors, class schedules and pricing, location, and other relevant details about Rambling Odyssey Yoga, etc. have been made up and are not intended to represent real people, places, or class offerings. </p>
-</div>
 
 <!-- Footer -->
 <footer>
     <p class="link">
-        <a href="/pages/about.html/">About</a><br>
-        <a href="/pages/contact.html/">Contact</a><br>
-        <a href="/pages/blog.html/">Blog</a>
+        <a href="/pages/about.html">About</a><br>
+        <a href="/pages/contact.html">Contact</a><br>
+        <a href="/pages/blog.html">Blog</a>
     </p>
     <p>1600 Pennsylvania Ave NW<br>
     Washington DC, 20500<br>
@@ -118,10 +119,5 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <!-- Video Playback at Half Speed -->
-    <script type="text/javascript">
-        var vid = document.querySelector("#videoBG");
-        vid.playbackRate = 0.5;
-    </script>
 </body>
 </html>
