Third Commit - Still Incomplete

--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -25,7 +25,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
-            <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/index.html">Home</a>
             <a class="nav-link" href="/pages/about.html">About</a>
             <a class="nav-link" href="/pages/calendar.html">Calendar</a>
             <a class="nav-link active" href="/pages/pricing.html">Pricing <span class="sr-only">(current)</span></a>
@@ -48,7 +48,7 @@
                     <p class="card-text">Sign up now for class packs in 5, 10, and 15 class increments and come whenever your schedule allows.</p>
                 </div>
                 <div class="pricingBtnWrapper">
-                    <a href="/pages/btnredirect.html" target="_BLANK" class="btn pricingBtn">Go somewhere</a>
+                    <a href="/pages/btnredirect.html" target="_BLANK" class="btn pricingBtn">Purchase</a>
                 </div>
             </div>
             <div class="card">
@@ -59,7 +59,7 @@
                     <p class="card-text">Sign up for a monthly pass and join us for as many classes as your schedule will allow-all month long!</p>
                 </div>
                 <div class="pricingBtnWrapper">
-                    <a href="/pages/btnredirect.html" target="_BLANK" class="btn pricingBtn">Go somewhere</a>
+                    <a href="/pages/btnredirect.html" target="_BLANK" class="btn pricingBtn">Purchase</a>
                 </div>
             </div>
             <div class="card">
@@ -71,7 +71,7 @@
                     <p class="card-text">Sign up now for our new member unlimited class pass and join us as often as you can for a discounted rate for the first three months! Welcome new friends!</p>
                 </div>
                 <div class="pricingBtnWrapper">
-                    <a href="/pages/btnredirect.html" target="_BLANK" class="btn pricingBtn">Go somewhere</a>
+                    <a href="/pages/btnredirect.html" target="_BLANK" class="btn pricingBtn">Purchase</a>
                 </div>
             </div>
         </div>
