--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <!-- Page Content -->
 <article class="homepage">
     <div class="videoBG">
-        <video id="videoBG" poster="poster.JPG" autoplay muted loop>
+        <video id="homepageVideo" autoplay muted loop>
             <source src="/images/yoga.mp4" type="video/mp4">
         </video>
     </div>
