--- a/pages/about.html
+++ b/pages/about.html
@@ -25,8 +25,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
-            <a class="nav-link active" href="/index.html">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="/pages/about.html">About</a>
+            <a class="nav-link" href="/index.html">Home</a>
+            <a class="nav-link active" href="/pages/about.html">About <span class="sr-only">(current)</span></a>
             <a class="nav-link" href="/pages/calendar.html">Calendar</a>
             <a class="nav-link" href="/pages/pricing.html">Pricing</a>
             <a class="nav-link" href="/pages/contact.html">Contact</a>
