Commit... again... still not done.

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -41,7 +41,7 @@
     <div class="contactTopper">
         <div class="contactWrapper">
             <div class="contactFormHeader">
-                <h1>Contact Rambling Odyssey Yoga</h1>
+                <h1>Have a question for us? Feel free to drop us a line:</h1>
                 <form>
                     <div class="contactForm">
                         <label for="userName">Your Name</label>
