--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,12 +17,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;900&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
-<body class="hompage">
+<body class="homepage">
 <!-- Navigation Bar -->
 <nav class="navbar fixed-top navbar-expand-md" style="background-color: #f4f4f4;">
     <a class="navbar-brand" href="/index.html"><img class="logo" src="/images/roLogo.png" alt="Rambling Odyssey Yoga"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
@@ -86,6 +86,11 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3105.1543664832784!2d-77.03878078456867!3d38.89758515453816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7b78e00410e73%3A0xac8125363999a8f!2s1600%20Pennsylvania%20Avenue%20NW%2C%20Washington%2C%20DC%2020500!5e0!3m2!1sen!2sus!4v1597443568435!5m2!1sen!2sus" 
                     width="375" height="255.5" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
+                <div class="mapIcon">
+                    <a href="https://www.google.com/maps?ll=38.941388,-77.028009&z=10&t=m&hl=en&gl=US&mapclient=embed&q=1600+Pennsylvania+Avenue+NW+Washington,+DC+20500" target="_BLANK">
+                        <i class="fas fa-map-marked-alt"></i>
+                    </a>
+                </div>
                 <h3>Address</h3>
                 <p>1600 Pennsylvania Ave NW<br>
                 Washington DC, 20500</p>
@@ -111,5 +116,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/8d3725dab7.js" crossorigin="anonymous"></script>
 </body>
 </html>
